[package]
name = "doomfire"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
web = ["wgpu/webgl", "winit/web-sys"]

[dependencies]
console_error_panic_hook = "0.1"
getrandom = { version = "0.2.3", features = ["js"] }
log = "0.4"
pixels = { path = "../../../pixels" }
rand = "0.8.4"
wasm-bindgen-futures = "0.4"
wgpu = "0.11"
winit = "0.25.0"
winit_input_helper = "0.10.0"
winit-web = { path = "../.." }